axum-tracing-opentelemetry/src/middleware/snapshots/axum_tracing_opentelemetry__middleware__trace_extractor__tests__call_with_w3c_trace.snap
---
source: axum-tracing-opentelemetry/src/middleware/trace_extractor.rs
expression: tracing_events
---
- fields:
    message: new
  level: INFO
  span:
    http.client_ip: ""
    http.flavor: "1.1"
    http.host: ""
    http.method: GET
    http.route: "/users/:id"
    http.scheme: HTTP
    http.target: /users/123
    http.user_agent: ""
    name: HTTP request
    otel.kind: server
    otel.name: "GET /users/:id"
    trace_id: b2611246a58fd7ea623d2264c5a1e226
  spans: []
  target: "axum_tracing_opentelemetry::middleware::trace_extractor"
  timestamp: "[timestamp]"
- fields:
    message: close
    time.busy: "[duration]"
    time.idle: "[duration]"
  level: INFO
  span:
    http.client_ip: ""
    http.flavor: "1.1"
    http.host: ""
    http.method: GET
    http.route: "/users/:id"
    http.scheme: HTTP
    http.status_code: "200"
    http.target: /users/123
    http.user_agent: ""
    name: HTTP request
    otel.kind: server
    otel.name: "GET /users/:id"
    otel.status_code: OK
    trace_id: b2611246a58fd7ea623d2264c5a1e226
  spans: []
  target: "axum_tracing_opentelemetry::middleware::trace_extractor"
  timestamp: "[timestamp]"

