axum-tracing-opentelemetry/src/middleware/snapshots/axum_tracing_opentelemetry__middleware__trace_extractor__tests__filled_http_route_for_existing_route_otel_spans.snap
---
source: src/middleware/trace_extractor.rs
expression: otel_spans
---
- trace_id: "[trace_id:lg32]"
  span_id: "[span_id:lg16]"
  trace_state: ""
  parent_span_id: "[span_id:lg0]"
  name: "GET /users/:id"
  kind: SPAN_KIND_SERVER
  start_time_unix_nano: "[timestamp]"
  end_time_unix_nano: "[timestamp]"
  attributes:
    busy_ns: ignore
    code.filepath: ignore
    code.lineno: ignore
    code.namespace: "Some(AnyValue { value: Some(StringValue(\"axum_tracing_opentelemetry::middleware::trace_extractor\")) })"
    http.client_ip: "Some(AnyValue { value: Some(StringValue(\"\")) })"
    http.flavor: "Some(AnyValue { value: Some(StringValue(\"1.1\")) })"
    http.host: "Some(AnyValue { value: Some(StringValue(\"\")) })"
    http.method: "Some(AnyValue { value: Some(StringValue(\"GET\")) })"
    http.route: "Some(AnyValue { value: Some(StringValue(\"/users/:id\")) })"
    http.scheme: "Some(AnyValue { value: Some(StringValue(\"HTTP\")) })"
    http.status_code: "Some(AnyValue { value: Some(StringValue(\"200\")) })"
    http.target: "Some(AnyValue { value: Some(StringValue(\"/users/123\")) })"
    http.user_agent: "Some(AnyValue { value: Some(StringValue(\"\")) })"
    idle_ns: ignore
    thread.id: ignore
    thread.name: "Some(AnyValue { value: Some(StringValue(\"middleware::trace_extractor::tests::check_span_event::case_1\")) })"
    trace_id: ignore
  dropped_attributes_count: 0
  events: []
  dropped_events_count: 0
  links: []
  dropped_links_count: 0
  status:
    message: ""
    code: STATUS_CODE_OK

