axum-tracing-opentelemetry/src/middleware/snapshots/axum_tracing_opentelemetry__middleware__trace_extractor__tests__grpc_status_code_on_close_for_ok_otel_spans.snap
---
source: axum-tracing-opentelemetry/src/middleware/trace_extractor.rs
expression: otel_spans
---
- trace_id: "[trace_id:lg32]"
  span_id: "[span_id:lg16]"
  trace_state: ""
  parent_span_id: "[span_id:lg0]"
  name: /module.service/endpoint1
  kind: SPAN_KIND_SERVER
  start_time_unix_nano: "[timestamp]"
  end_time_unix_nano: "[timestamp]"
  attributes:
    busy_ns: ignore
    code.filepath: ignore
    code.lineno: ignore
    code.namespace: "Some(AnyValue { value: Some(StringValue(\"axum_tracing_opentelemetry::middleware::trace_extractor\")) })"
    http.client_ip: "Some(AnyValue { value: Some(StringValue(\"\")) })"
    http.flavor: "Some(AnyValue { value: Some(StringValue(\"1.1\")) })"
    http.grpc_status: "Some(AnyValue { value: Some(IntValue(2)) })"
    http.host: "Some(AnyValue { value: Some(StringValue(\"\")) })"
    http.method: "Some(AnyValue { value: Some(StringValue(\"POST\")) })"
    http.route: "Some(AnyValue { value: Some(StringValue(\"/module.service/endpoint1\")) })"
    http.scheme: "Some(AnyValue { value: Some(StringValue(\"HTTP\")) })"
    http.status_code: "Some(AnyValue { value: Some(StringValue(\"200\")) })"
    http.target: "Some(AnyValue { value: Some(StringValue(\"/module.service/endpoint1\")) })"
    http.user_agent: "Some(AnyValue { value: Some(StringValue(\"\")) })"
    idle_ns: ignore
    thread.id: ignore
    thread.name: "Some(AnyValue { value: Some(StringValue(\"middleware::trace_extractor::tests::check_span_event_grpc::case_1\")) })"
    trace_id: ignore
  dropped_attributes_count: 0
  events: []
  dropped_events_count: 0
  links:
    - trace_id: "[trace_id:lg32]"
      span_id: "[span_id:lg16]"
      trace_state: ""
      attributes: {}
      dropped_attributes_count: 0
  dropped_links_count: 0
  status:
    message: ""
    code: STATUS_CODE_OK

